# sigmoid

./: ChangeLog  Makefile.am  aclocal.m4  config.h.in  configure.ac
po/: ChangeLog  Makefile.in.in~  sigmoid.pot
src/: Makefile.am  common.h  main.c  sigmoid.c  sigmoid.h  sigmoid.ui
